consuming GraphCMS for the blog post page

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -71,6 +71,33 @@ html {
   font-size: 16px;
 }
 
+.Test {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Test p {
+  font-weight: 100;
+	width: 48%;
+  font-size: 20px;
+	line-height: 2rem;
+	margin-top: 1.8rem;
+}
+
+.Test blockquote {
+  width: 63%;
+	font-size: 24px;
+  line-height: 2.5rem;
+  margin-top: 2rem;
+}
+
+.Test p strong {
+  width: 63%;
+	font-size: 24px;
+	line-height: 2.5rem;
+}
+
 button {
   cursor: pointer;
   outline: none;
